doc: add doc of activity methods
